# advanced_attendance

./: MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
advanced_attendance/: hooks.py  install.py  modules.txt
advanced_attendance/Advanced Attendance/: __init__.py
advanced_attendance/Advanced Attendance/doctype/salary_base_calculation_settings/: test_salary_base_calculation_settings.py
advanced_attendance/advanced_attendance/doctype/salary_base_calculation_settings/: __init__.py  salary_base_calculation_settings.json  salary_base_calculation_settings.py
advanced_attendance/fixtures/: custom_field.json
advanced_attendance/overrides/: __init__.py  attendance.py  salary_structure_assignment.py
advanced_attendance/public/js/: attendance.js
